--- a/instance/index.html
+++ b/instance/index.html
@@ -5,13 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="format-detection" content="telephone=no" />
 
-		<link rel="apple-touch-icon" href="../build/0.0.0/src/img/icon.png" />
-		<link rel="shortcut icon" href="../build/0.0.0/src/img/favicon.ico" />
-		<link rel="stylesheet" href="../build/0.0.0/src/css/main.css" />
-
 		<title>Example</title>
-		<meta name="author" content="Software Developer" />
 		<meta name="description" content="Example Package" />
+		<meta name="author" content="Software Developer" />
+
+		<link rel="apple-touch-icon" href="../build/0.0.0/img/icon.png" />
+		<link rel="shortcut icon" href="../build/0.0.0/img/favicon.ico" />
+		<link rel="stylesheet" href="../build/0.0.0/css/main.css" />
 	</head>
 
 	<body class="container">
@@ -21,7 +21,7 @@
 			<header id="header"></header>
 			<section id="content">
 				<div class="splash">
-					<img src="../build/0.0.0/src/img/loading.gif" alt="Loading..." />
+					<img src="../build/0.0.0/img/loading.gif" alt="Loading..." />
 				</div>
 			</section>
 			<footer id="footer"></footer>
@@ -29,7 +29,7 @@
 		</section>
 		<footer class="footer"></footer>
 
-		<script data-main="../build/0.0.0/src/html" src="../build/0.0.0/lib/require.js"></script>
+		<script data-main="../build/0.0.0/src/main" src="../build/0.0.0/lib/require.js"></script>
 		<noscript><p>JavaScript Required: please adjust your browser settings.</p></noscript>
 	</body>
 </html>
