--- a/test/example.html
+++ b/test/example.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>QUnit basic example</title>
-  <link rel="stylesheet" href="../../node_modules/grunt-contrib-qunit/test/libs/qunit.css">
+  <link rel="stylesheet" href="../node_modules/grunt-contrib-qunit/test/libs/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../../node_modules/grunt-contrib-qunit/test/libs/qunit.js"></script>
+  <script src="../node_modules/grunt-contrib-qunit/test/libs/qunit.js"></script>
   <script>
     test( "a basic test example", function() {
       var value = "hello";
