--- a/system/src/test/qunit/index.html
+++ b/system/src/test/qunit/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Unit Tests</title>
-  <link rel="stylesheet" href="../../css/qunit.css">
+  <link rel="stylesheet" href="../../../css/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../../lib/qunit.js"></script>
+  <script src="../../../lib/qunit.js"></script>
   <script>QUnit.config.autostart = false;</script>
-  <script data-main="main" src="../../lib/require.js"></script>
+  <script data-main="../qunit" src="../../../lib/require.js"></script>
 </body>
 </html>
