--- a/system/src/test/jasmine/index.html
+++ b/system/src/test/jasmine/index.html
@@ -54,7 +54,7 @@
       
     ],
     function(){
-      require(['Example.js','initialize.js','../../../../.grunt/grunt-contrib-jasmine/reporter.js'], function(){
+      require(['Cache.js','Example.js','initialize.js','../../../../.grunt/grunt-contrib-jasmine/reporter.js'], function(){
         require(['../../../../.grunt/grunt-contrib-jasmine/jasmine-helper.js'], function(){
           // good to go! Our tests should already be running.
         })
