--- a/instance/index.html
+++ b/instance/index.html
@@ -2,6 +2,10 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8" />
+		<!--[if lt IE 9]>
+			<script src="../build/0.0.0/lib/polyfill/html5shiv.js"></script>
+			<script src="../build/0.0.0/lib/polyfill/json3.js"></script>
+		<![endif]-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="format-detection" content="telephone=no" />
 
@@ -11,23 +15,36 @@
 
 		<link rel="apple-touch-icon" href="../build/0.0.0/img/icon.png" />
 		<link rel="shortcut icon" href="../build/0.0.0/img/favicon.ico" />
-		<link rel="stylesheet" href="../build/0.0.0/css/main.css" />
+		<link rel="stylesheet" href="../build/0.0.0/css/app.css" />
 	</head>
 
 	<body class="container">
-		<header role="banner" class="navbar navbar-static-top"></header>
+		<header role="banner" class="navbar navbar-static-top">
+			<nav class="navbar-inner">
+				<ul class="nav menu">
+					<li><a href="#/home">home</a></li>
+					<li><a href="#/login">login</a></li>
+					<li><a href="#/other">other</a></li>
+					<li><a target="_blank" href="../build/0.0.0/src/test/jasmine/index.html">test</a></li>
+				</ul>
+			</nav>
+		</header>
+
 		<section role="main" class="container" aria-live="assertive" aria-atomic="true">
-
-			<header id="header"></header>
-			<section id="content">
-				<div class="splash">
-					<img src="../build/0.0.0/img/loading.gif" alt="Loading..." />
-				</div>
-			</section>
-			<footer id="footer"></footer>
-
+			<div ng-view>
+				<header id="header"></header>
+				<section id="content">
+					<div class="splash">
+						<img src="../build/0.0.0/img/loading.gif" alt="Loading..." />
+					</div>
+				</section>
+				<footer id="footer"></footer>
+			</div>
 		</section>
-		<footer class="footer"></footer>
+
+		<footer role="contentinfo" class="footer">
+			<div app-version></div>
+		</footer>
 
 		<script data-main="../build/0.0.0/src/main" src="../build/0.0.0/lib/require.js"></script>
 		<noscript><p>JavaScript Required: please adjust your browser settings.</p></noscript>
