--- a/system/src/test/jasmine/index.html
+++ b/system/src/test/jasmine/index.html
@@ -43,7 +43,7 @@
     ],
     function(){
       require([''], function(){
-        require(['unit/Appaloosa.js','unit/Cache.js','unit/Clydesdale.js','unit/Corral.js','unit/Example.js','unit/Horse.js','unit/Human.js','unit/Mammal.js','unit/Organism.js','unit/Pasture.js','unit/Wrangler.js','../../../../.grunt/grunt-contrib-jasmine/reporter.js'], function(){
+        require(['unit/Appaloosa.js','unit/Cache.js','unit/Clydesdale.js','unit/Corral.js','unit/Example.js','unit/Horse.js','unit/Human.js','unit/Mammal.js','unit/Model.js','unit/Organism.js','unit/Pasture.js','unit/Wrangler.js','../../../../.grunt/grunt-contrib-jasmine/reporter.js'], function(){
           startTests();
         });
       });
